# fastapi-silk

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
alembic/versions/: 0e347a6e53bb_init.py
src/fastapi_silk/: __init__.py  middleware.py  profiler.py  storage.py
src/fastapi_silk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/my_library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_profiler.py
tests/fixtures/: __init__.py  sql_queries.py
tests/profiler/: test_profiler.py
