[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-silk"
dynamic = ["version"]
description = "SQL profiler middleware for FastAPI"
authors = [{ name="ItzMaze" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "sqlalchemy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.15.1",
]


[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["F401"]

[tool.mypy]
strict = true
